test/earlyReturn7.slq

def main(){
	x:=H(0:ğ”¹);
	if x{
		return 1; // error
	}
	measure(x);
	return 0;
	/+x:=measure(x);
	return x;+/
}
